src/assets/styles/About.css
.container {
  display: flex;
  position: fixed;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  z-index: -1;
}

.left-half > h1 {
  font-size: 5vw;
  font-family: 'Poiret One', 'cursive';
  margin: 0 0 0.75rem 0;
  text-decoration: none;
  text-transform: uppercase;
  letter-spacing: 0.1em;
  color: #445561;
}

.contact-info > h2 {
  font-size: 1.2rem;
  font-family: 'Poiret One', 'cursive';
  margin: 0 0 0.75rem 0;
  padding-top: 20px;
  text-decoration: none;
  text-transform: uppercase;
  letter-spacing: 0.1em;
  color: #445561;
  border-top: 1px solid rgba(255, 255, 255, 0.25);
}

.contact-info > a {
  font-size: 1.2rem;
  font-family: 'Poiret One', 'cursive';
  margin: 0 0 0.75rem 0;
  padding-top: 20px;
  text-decoration: none;
  text-transform: uppercase;
  letter-spacing: 0.1em;
  color: #eee;
}

.contact-info > p {
  font-family: 'Poiret One', 'cursive';
  font-size: 20px;
  font-weight: 500;
  line-height: 22px;
  text-align: justify;
  color: #eee;
}

.about-line {
  width: 50px;
  max-height: 4px;
  max-width: 50px;
  min-height: 4px;
  border-radius: 30px;
  background-color: #445561;
}

.left-half {
  background-color: #00e1b6;
  flex: 1;
  padding: 1rem;
}

.left-half > p {
  font-family: 'Poiret One', 'cursive';
  font-size: 20px;
  font-weight: bold;
  line-height: 22px;
  text-align: justify;
  text-justify: inter-word;
  color: #eee;
}

.right-half {
  flex: 1;

  background-image: url('../img/face/bg.png');
  background-repeat: repeat;
}

.right-half > img {
  display: block;
  margin-left: auto;
  margin-right: auto;
}

@media only screen and (max-width: 800px) {
  .container {
    flex-direction: column;
    position: relative;
  }
  .right-half {
    order: 0;
  }
  .left-half {
    order: 1;
    margin-top: -5px;
  }
  picture > img {
    width: 50%;
  }
}

